[package]
name = "mazeapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maze = { path = "../maze" }
rand = "*"
eframe = { version = "0.19.0", default-features = false, features = ["wgpu", "default_fonts"] }